user controller and validation
